--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Oswald font */
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Oswald:wght@200..700&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 * {
@@ -23,11 +23,10 @@
   border: 3px solid rgb(78, 189, 157);
   box-shadow: 0 4px 12px rgb(78, 189, 158);
   /* border-colored shadow */
-  font-family: "Oswald", sans-serif;
+  font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-weight: 900;
+  font-weight: 600;
   font-style: normal;
-  font-size: 18px;
 }
 
 .volunteer_form {
